--- a/frontend/src/stylesheets/layout/_navbar.scss
+++ b/frontend/src/stylesheets/layout/_navbar.scss
@@ -4,6 +4,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0rem 1.5rem;
+  padding: 0rem 2rem;
+  padding-top: 1rem;
   background-color: var(--nav-background-color);
+  overflow: hidden;
 }
